--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "css-loader": "^5.0.0",
     "dotenv-webpack": "^4.0.0",
+    "file-loader": "^6.1.1",
     "html-webpack-plugin": "^4.5.0",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.3",
