--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "dotenv": "^8.2.0",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20"
